feat: First working build
Doesn't install obviously because leaf-loader isn't on maven central yet.