@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2017, 2018, 2019 FabricMC
+ * Copyright (c) 2016-2025 FabricMC, aoqia
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,8 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-package net.fabricmc.installer;
+package dev.aoqia.installer;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
@@ -28,7 +27,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Properties;
@@ -36,174 +34,164 @@ import java.util.StringTokenizer;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
-import java.util.zip.ZipError;
 
-import net.fabricmc.installer.server.MinecraftServerDownloader;
-import net.fabricmc.installer.server.ServerInstaller;
-import net.fabricmc.installer.util.InstallerProgress;
-import net.fabricmc.installer.util.Utils;
+import dev.aoqia.installer.server.ServerInstaller;
+import dev.aoqia.installer.util.InstallerProgress;
+import dev.aoqia.installer.util.OperatingSystem;
+import dev.aoqia.installer.util.Utils;
 
 public final class ServerLauncher {
-	private static final String INSTALL_CONFIG_NAME = "install.properties";
-	private static final Path DATA_DIR = Paths.get(".fabric", "server");
+    private static final String INSTALL_CONFIG_NAME = "install.properties";
+    private static final Path DATA_DIR = Paths.get(".leaf", "server");
 
-	public static void main(String[] args) throws Throwable {
-		LaunchData launchData;
+    public static void main(String[] args) throws Throwable {
+        LaunchData launchData;
 
-		try {
-			launchData = initialise();
-		} catch (IOException e) {
-			throw new RuntimeException("Failed to setup fabric server", e);
-		}
+        try {
+            launchData = initialise();
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to setup leaf server", e);
+        }
 
-		Objects.requireNonNull(launchData, "launchData is null, cannot proceed");
+        Objects.requireNonNull(launchData, "launchData is null, cannot proceed");
 
-		// Set the game jar path to bypass loader's own lookup
-		System.setProperty("fabric.gameJarPath", launchData.serverJar.toAbsolutePath().toString());
+        // Set the game jar path to bypass loader's own lookup
+        System.setProperty("leaf.gamePath", launchData.serverPath.toAbsolutePath().toString());
 
-		@SuppressWarnings("resource")
-		URLClassLoader launchClassLoader = new URLClassLoader(new URL[]{launchData.launchJar.toUri().toURL()});
+        @SuppressWarnings("resource")
+        URLClassLoader launchClassLoader = new URLClassLoader(new URL[] { launchData.launchJar.toUri().toURL() });
 
-		// Use method handle to keep the stacktrace clean
-		MethodHandle handle = MethodHandles.publicLookup().findStatic(launchClassLoader.loadClass(launchData.mainClass), "main", MethodType.methodType(void.class, String[].class));
-		handle.invokeExact(args);
-	}
+        // Use method handle to keep the stacktrace clean
+        MethodHandle handle = MethodHandles.publicLookup()
+            .findStatic(launchClassLoader.loadClass(launchData.mainClass),
+                "main",
+                MethodType.methodType(void.class, String[].class));
+        handle.invokeExact(args);
+    }
 
-	// Validates and downloads/installs the server if required
-	private static LaunchData initialise() throws IOException {
-		Properties properties = readProperties();
+    // Validates and downloads/installs the server if required
+    private static LaunchData initialise() throws IOException {
+        Properties properties = readProperties();
 
-		String customLoaderPath = System.getProperty("fabric.customLoaderPath"); // intended for testing and development
-		LoaderVersion loaderVersion;
+        String customLoaderPath = System.getProperty(";eaf.customLoaderPath"); // intended for testing and development
+        LoaderVersion loaderVersion;
 
-		if (customLoaderPath == null) {
-			loaderVersion = new LoaderVersion(Objects.requireNonNull(properties.getProperty("fabric-loader-version"), "no loader-version specified in " + INSTALL_CONFIG_NAME));
-		} else {
-			loaderVersion = new LoaderVersion(Paths.get(customLoaderPath));
-		}
+        if (customLoaderPath == null) {
+            loaderVersion = new LoaderVersion(Objects.requireNonNull(properties.getProperty("leaf-loader-version"),
+                "no loader-version specified in " + INSTALL_CONFIG_NAME));
+        } else {
+            loaderVersion = new LoaderVersion(Paths.get(customLoaderPath));
+        }
 
-		String gameVersion = Objects.requireNonNull(properties.getProperty("game-version"), "no game-version specified in " + INSTALL_CONFIG_NAME);
+        String gameVersion = Objects.requireNonNull(properties.getProperty("game-version"),
+            "no game-version specified in " + INSTALL_CONFIG_NAME);
 
-		// 0.12 or higher is required
-		validateLoaderVersion(loaderVersion);
+        // 1.0 or higher is required
+        validateLoaderVersion(loaderVersion);
 
-		Path baseDir = Paths.get(".").toAbsolutePath().normalize();
-		Path dataDir = baseDir.resolve(DATA_DIR);
+        Path baseDir = Paths.get(".").toAbsolutePath().normalize();
+        Path dataDir = baseDir.resolve(DATA_DIR);
 
-		// Vanilla server jar
-		String customServerJar = System.getProperty("fabric.installer.server.gameJar", null);
-		Path serverJar = customServerJar == null ? dataDir.resolve(String.format("%s-server.jar", gameVersion)) : Paths.get(customServerJar);
-		// Includes the mc version as this jar contains intermediary
-		Path serverLaunchJar = dataDir.resolve(String.format("fabric-loader-server-%s-minecraft-%s.jar", loaderVersion.name, gameVersion));
+        String customServerPath = System.getProperty("leaf.installer.server.gamePath", null);
+        final String ext = (OperatingSystem.CURRENT.equals(OperatingSystem.WINDOWS) ? ".bat" : "sh");
+        Path windowsServerScript = customServerPath == null ? dataDir.resolve("StartServer64." + ext)
+            : Paths.get(customServerPath).resolve("StartServer64." + ext);
 
-		if (!Files.exists(serverJar)) {
-			InstallerProgress.CONSOLE.updateProgress(Utils.BUNDLE.getString("progress.download.minecraft"));
-			MinecraftServerDownloader downloader = new MinecraftServerDownloader(gameVersion);
-			downloader.downloadMinecraftServer(serverJar);
-		}
+        if (!Files.exists(windowsServerScript)) {
+            InstallerProgress.CONSOLE.updateProgress(Utils.BUNDLE.getString("progress.exception.no.server.manifest"));
+            throw new RuntimeException("Server install path does not exist.");
+        }
 
-		if (Files.exists(serverLaunchJar)) { // install exists, verify libs exist and determine main class
-			try {
-				List<Path> classPath = new ArrayList<>();
-				String mainClass = readManifest(serverLaunchJar, classPath);
-				boolean allPresent = true;
+        if (Files.exists(windowsServerScript)) {
+            final String mainClass = "zombie/network/gameServer";
+            if (Files.exists(windowsServerScript.getParent().resolve(mainClass))) {
+                return new LaunchData(windowsServerScript, windowsServerScript, mainClass);
+            }
 
-				for (Path file : classPath) {
-					if (!Files.exists(file)) {
-						allPresent = false;
-						break;
-					}
-				}
+            System.err.println("Detected incomplete install, reinstalling");
+        }
 
-				if (allPresent) {
-					// All seems good, no need to reinstall
-					return new LaunchData(serverJar, serverLaunchJar, mainClass);
-				} else {
-					System.err.println("Detected incomplete install, reinstalling");
-				}
-			} catch (IOException | ZipError e) {
-				// Wont throw here, will try to reinstall
-				System.err.println("Failed to analyze or verify existing install: " + e.getMessage());
-			}
-		}
+        Files.createDirectories(dataDir);
+        ServerInstaller.install(baseDir, loaderVersion, gameVersion, InstallerProgress.CONSOLE, windowsServerScript);
 
-		Files.createDirectories(dataDir);
-		ServerInstaller.install(baseDir, loaderVersion, gameVersion, InstallerProgress.CONSOLE, serverLaunchJar);
+        String mainClass = readManifest(windowsServerScript, null);
 
-		String mainClass = readManifest(serverLaunchJar, null);
+        return new LaunchData(windowsServerScript, windowsServerScript, mainClass);
+    }
 
-		return new LaunchData(serverJar, serverLaunchJar, mainClass);
-	}
+    private static Properties readProperties() throws IOException {
+        Properties properties = new Properties();
 
-	private static Properties readProperties() throws IOException {
-		Properties properties = new Properties();
+        URL config = getConfigFromResources();
 
-		URL config = getConfigFromResources();
+        if (config == null) {
+            throw new RuntimeException("Jar does not contain unattended install.properties file");
+        }
 
-		if (config == null) {
-			throw new RuntimeException("Jar does not contain unattended install.properties file");
-		}
+        try (InputStreamReader reader = new InputStreamReader(config.openStream(), StandardCharsets.UTF_8)) {
+            properties.load(reader);
+        } catch (IOException e) {
+            throw new IOException("Failed to read " + INSTALL_CONFIG_NAME, e);
+        }
 
-		try (InputStreamReader reader = new InputStreamReader(config.openStream(), StandardCharsets.UTF_8)) {
-			properties.load(reader);
-		} catch (IOException e) {
-			throw new IOException("Failed to read " + INSTALL_CONFIG_NAME, e);
-		}
+        return properties;
+    }
 
-		return properties;
-	}
+    // Find the mainclass of a jar file
+    private static String readManifest(Path path, List<Path> classPathOut) throws IOException {
+        try (JarFile jarFile = new JarFile(path.toFile())) {
+            Manifest manifest = jarFile.getManifest();
+            String mainClass = manifest.getMainAttributes().getValue(Attributes.Name.MAIN_CLASS);
 
-	// Find the mainclass of a jar file
-	private static String readManifest(Path path, List<Path> classPathOut) throws IOException {
-		try (JarFile jarFile = new JarFile(path.toFile())) {
-			Manifest manifest = jarFile.getManifest();
-			String mainClass = manifest.getMainAttributes().getValue(Attributes.Name.MAIN_CLASS);
+            if (mainClass == null) {
+                throw new IOException("Jar does not have a Main-Class attribute");
+            }
 
-			if (mainClass == null) {
-				throw new IOException("Jar does not have a Main-Class attribute");
-			}
+            if (classPathOut != null) {
+                String cp = manifest.getMainAttributes().getValue(Attributes.Name.CLASS_PATH);
 
-			if (classPathOut != null) {
-				String cp = manifest.getMainAttributes().getValue(Attributes.Name.CLASS_PATH);
+                StringTokenizer tokenizer = new StringTokenizer(cp);
+                URL baseUrl = path.toUri().toURL();
 
-				StringTokenizer tokenizer = new StringTokenizer(cp);
-				URL baseUrl = path.toUri().toURL();
+                while (tokenizer.hasMoreTokens()) {
+                    String token = tokenizer.nextToken();
+                    URL url = new URL(baseUrl, token);
 
-				while (tokenizer.hasMoreTokens()) {
-					String token = tokenizer.nextToken();
-					URL url = new URL(baseUrl, token);
+                    try {
+                        classPathOut.add(Paths.get(url.toURI()));
+                    } catch (URISyntaxException e) {
+                        throw new IOException(String.format("invalid class path entry in %s manifest: %s",
+                            path,
+                            token));
+                    }
+                }
+            }
 
-					try {
-						classPathOut.add(Paths.get(url.toURI()));
-					} catch (URISyntaxException e) {
-						throw new IOException(String.format("invalid class path entry in %s manifest: %s", path, token));
-					}
-				}
-			}
+            return mainClass;
+        }
+    }
 
-			return mainClass;
-		}
-	}
+    private static void validateLoaderVersion(LoaderVersion loaderVersion) {
+        if (Utils.compareVersions(loaderVersion.name, "1.0") < 0) {
+            throw new UnsupportedOperationException(
+                "Leaf loader 1.0 or higher is required for unattended server installs. Please use a newer leaf loader" +
+                " version, or the full installer.");
+        }
+    }
 
-	private static void validateLoaderVersion(LoaderVersion loaderVersion) {
-		if (Utils.compareVersions(loaderVersion.name, "0.12") < 0) { // loader version below 0.12
-			throw new UnsupportedOperationException("Fabric loader 0.12 or higher is required for unattended server installs. Please use a newer fabric loader version, or the full installer.");
-		}
-	}
+    private static URL getConfigFromResources() {
+        return ServerLauncher.class.getClassLoader().getResource(INSTALL_CONFIG_NAME);
+    }
 
-	private static URL getConfigFromResources() {
-		return ServerLauncher.class.getClassLoader().getResource(INSTALL_CONFIG_NAME);
-	}
+    private static class LaunchData {
+        final Path serverPath;
+        final Path launchJar;
+        final String mainClass;
 
-	private static class LaunchData {
-		final Path serverJar;
-		final Path launchJar;
-		final String mainClass;
-
-		private LaunchData(Path serverJar, Path launchJar, String mainClass) {
-			this.serverJar = Objects.requireNonNull(serverJar, "serverJar");
-			this.launchJar = Objects.requireNonNull(launchJar, "launchJar");
-			this.mainClass = Objects.requireNonNull(mainClass, "mainClass");
-		}
-	}
+        private LaunchData(Path serverPath, Path launchJar, String mainClass) {
+            this.serverPath = Objects.requireNonNull(serverPath, "serverPath");
+            this.launchJar = Objects.requireNonNull(launchJar, "launchJar");
+            this.mainClass = Objects.requireNonNull(mainClass, "mainClass");
+        }
+    }
 }
